renaming annotation + reorganizing work
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>